
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 SEP 21a
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - in find_post_variable_name_fluid(), and find_post_variable_value_fluid(), added post variables
      Qen and EdotJe
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - added _Te_min() and _Te_smooth()
    - in _Techem(), now calls _Te_min() and _Te_smooth(), but with the same functionality as before
  * in model/chem/_H2_Air_9s/doc/report.tex
    - added validation cases
    

2020 SEP 17a
  * in cycle/res/_generic/res.c
    - added CYCLELEVEL_RES to find_Kstar_interface() call
  * in cycle/share/ts_share.c
    - added CYCLELEVEL_TS to find_Kstar_interface() call
  * in model/emfield/*/emfield.c
    - in write_model_emfield_template(), changed Te_buffer=0.0; to Te_buffer=300.0;
  * in model/fluid/*/fluid.c
    - added CYCLELEVEL parameter to find_Kstar_interface()
  * in src/post.c
    - added CYCLELEVEL_RES to find_Kstar_interface() call
  * in src/common.h
    - added definitions for CYCLELEVEL_RES and CYCLELEVEL_TS
  * in model/fluid/_*_plasma/fluid.c
    - in find_Kstar_interface(), made changes to electron thermal diffusion coefficient: is now
      only added for CYCLELEVEL_TS not CYCLELEVEL_RES
  * in model/fluid/_*_plasma/fluid_plasma.c
    - in find_Dstar(), now calls find_Ve_from_J() instead of find_Ve_from_Je()
    - in find_Dstarplus() and find_Dstarminus(), now also conditions electron energy not just the 
      charged species continuity equations
  * in model/fluid/_*_plasma/fluid_source.c
    - in find_dSe_dU_transport(), removed the line that set to zero the non-diagonal elements
      of dSedU
  * in model/fluid/doc/Transport_Equations/report.tex