@@ -11,6 +11,7 @@ option   C3H8_Air_16s_23r_Kundu
 option   C12H23_Air_16s_23r_Kundu
 option   CH4_Air_20s_52r_Yungster
 option   CO2_Plasma_23s_Park
+optionP   Cs_Air_Plasma_11s
 optionP   Cs_Air_Plasma_15s
 option   He_Air_3s_0r
 option   H2_Air_3s_0r
