@@ -9,6 +9,7 @@ clean:
 
 cleanall:
 	( cd _Epotential-Bfixed ; make cleanall )
+	( cd _Epotential-Te ; make cleanall )
 	( cd _Epotential ; make cleanall )
 	( cd _none ; make cleanall )
 	( cd doc ; make clean )
